# tensegrity-lab

./: .gitignore  Cargo.toml  EIG.md  README.md  brick_library.scm  brick_library.tenscript  fabric_library.scm  fabric_library.tenscript  index.html
.claude/: CLAUDE.md  context.md  settings.json
assets/: manifest.json  style.css  sw.js
docs/: DSL.md  Tenscript.md  prototypes.usda  quick_usd_reload.py  tenscript.md
docs/pretenst-2025-05-21-09-50-zonder-zwaartekracht/: info.txt  intervals.csv  joints.csv  submerged.csv
scripts/: build-triped.sh  prototypes.blend  render.sh  tensegrity_import.py
src/: animation_export.rs  animation_exporter.rs  animator.rs  annealing.rs  application.rs  caliper.rs  camera.rs  control_state.rs  cord_machine.rs  crucible.rs  crucible_context.rs  experiment.rs  export.rs  fabric.rs  fabric_hook.rs  face.rs  graphics.rs  growth.rs  gui.rs  init.rs  interval.rs  joint.rs  keyboard.rs  lib.rs  main.rs  messages.rs  parser.rs  physics.rs  pinch_detector.rs  plan_runner.rs  pointer.rs  post_iterate.rs  scene.rs  shader.wgsl  tenscript.rs  test.rs  twist.rs  ui.rs  units.rs  vulcanize.rs  (+2 more)
src/blender/: camera.rs  geometry.rs  light.rs  material.rs  mod.rs  usd.rs
src/control_overlay/: action.rs  app.rs  details_view.rs  fabric_choice_view.rs  key_menu.rs  lab_view.rs  menu.rs  menu_view.rs  message.rs  mod.rs  overlay.rs  scale_view.rs  stats_view.rs
src/controls/: fabric_choice.rs  gravity.rs  mod.rs  strain_control.rs  strain_threshold.rs
src/fabric/: annealing.rs  attachment.rs  brick.rs  correction.rs  csv_export.rs  error.rs  export.rs  fabric_sampler.rs  face.rs  interval.rs  joint.rs  joint_context.rs  joint_incident.rs  joint_path.rs  lab.rs  location.rs  material.rs  mod.rs  movement_sampler.rs  physics.rs  physics_test.rs  pretenser.rs  progress.rs  twist.rs  vulcanize.rs
src/gui/: control_state.rs  fabric_choice.rs  gravity.rs  mod.rs  strain_threshold.rs
src/testing/: boxing_test.rs  failure_test.rs  mod.rs  physics_test.rs
src/user_interface/: control_state.rs  fabric_choice.rs  gravity.rs  keyboard.rs  menu.rs  mod.rs  muscle.rs  strain_threshold.rs
src/wgpu/: attachment_renderer.rs  cylinder.rs  cylinder_renderer.rs  drawing.rs  fabric_renderer.rs  fabric_vertex.rs  hinge_renderer.rs  joint_renderer.rs  knot_renderer.rs  mod.rs  shader.wgsl  sky_renderer.rs  surface_renderer.rs  surface_vertex.rs  text_renderer.rs  text_state.rs
tests/: brick_builders_test.rs
