[package]
name = "tensegrity_lab"
version = "0.1.0"
authors = ["Gerald de Jong <geralddejong@gmail.com>"]
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
clap = { version = "4.5.30", features = ["derive"] }
fast_inv_sqrt = "~1.0"
futures = "0.3.30"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.14.0"
log = "0.4.26"
pest = "2.7.15"
pest_derive = "2.7.15"
rand = { version = "0.8", features = ["getrandom"] }
winit = { version = "0.30.5", features = ["rwh_04"] }
rand_chacha = "0.3.1"
wgpu_text = "0.9.2"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
chrono = "0.4.40"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
wgpu = "24.0.1"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "24.0.1", features = ["webgl"] }
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.70", features = [
    "Document",
    "Window",
    "Element",
    "KeyboardEvent",
    "KeyboardEventInit",
    "EventTarget",
] }

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[lib]
crate-type = ["rlib"]

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
