[package]
name = "tensegrity_lab"
version = "0.1.0"
authors = ["Gerald de Jong <geralddejong@gmail.com>"]
edition = "2021"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
clap = { version = "4.5.30", features = ["derive"] }
fast_inv_sqrt = "~1.0"
futures = "0.3.30"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.14.0"
rand = { version = "0.8", features = ["getrandom"] }
winit = { version = "0.30.12", features = ["rwh_04"] }
rand_chacha = "0.3.1"
wgpu_text = "0.9.2"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
chrono = "0.4.40"
strum = { version = "0.26", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
wgpu = "24.0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
urlencoding = "2.1.3"
zip = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "24.0.1", features = ["webgl"] }
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.70", features = [
    "Document",
    "Window",
    "Element",
    "KeyboardEvent",
    "KeyboardEventInit",
    "EventTarget",
] }

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[lib]
crate-type = ["rlib"]

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
