[package]
name = "tensegrity_lab"
version = "0.1.0"
authors = ["Gerald de Jong <geralddejong@gmail.com>"]
edition = "2021"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
slotmap = "1.1.1"
clap = { version = "4.5.53", features = ["derive"] }
fast_inv_sqrt = "~1.0"
futures = "0.3.30"
getrandom = { version = "0.2.16", features = ["js"] }
rand = "0.9"
winit = { version = "0.30.12", features = ["rwh_04"] }
rand_chacha = "0.9"
wgpu_text = "=0.9.2"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
chrono = "0.4.42"
strum = { version = "0.27", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
wgpu = "24.0.5"
reqwest = { version = "0.12.28", features = ["json", "multipart"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
urlencoding = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "24.0.5", features = ["webgl"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Document",
    "Window",
    "Element",
    "KeyboardEvent",
    "KeyboardEventInit",
    "EventTarget",
] }

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[lib]
crate-type = ["rlib"]

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.bundle]
name = "Tensegrity Lab"
identifier = "com.pretenst.tensegrity-lab"
version = "0.1.0"
copyright = "Copyright © 2025 Gerald de Jong. All rights reserved."
category = "Developer Tool"
short_description = "Design and simulate tensegrity structures"
long_description = """
Tensegrity Lab is a high-performance application for designing,
simulating, and physically building tensegrity structures using
Elastic Interval Geometry (EIG).
"""
